# launchpad-ansible

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  ansible.cfg  backup-pi-hole.yaml  execute-backup.yaml  pyproject.toml  setup-admin-user-synology.yaml  setup-admin-user.yaml  setup-ansible.yaml  setup-archivebox.yaml  setup-devops-users.yaml  setup-ha-access.yaml  setup-hoader.yaml  setup-pi-hole.yaml  setup-pi-iris.yaml  setup-portainer.yaml  setup-semaphore.yaml  setup-snipeit.yaml  setup-sudo.yaml  setup-synology.yaml  setup-users-admin.yaml  setup-users-devops.yaml  start-backup.yaml
group_vars/: all.yaml  general_storage_nodes.yaml  pihole_nodes.yaml  pihole_slaves.yaml  synology_storage_nodes.yaml
host_vars/atlas/: vars.yaml
host_vars/nas-01-synology/: vars.yaml
inventory/: general_storage_nodes.yaml  hosts.yaml  pihole_nodes.yaml  portainer_nodes.yaml  storage_nodes.yaml  synology_storage_nodes.yaml  ttes.yaml
roles/___setup-backup-pi/tasks/: configure_remote_backup.yaml
roles/add-sudo-user/tasks/: add_general_user.yaml  add_synology_user.yaml  add_to_groups.yaml  add_to_sudoers.yaml  add_user.yaml  display_user_details.yaml  main.yaml
roles/add-sudo-user/templates/: grant_sudo_access.j2  sudoers.j2
roles/add-synology-sudo-user/tasks/: main.yaml
roles/add-synology-sudo-user/templates/: sudoers.j2
roles/add-to-group/tasks/: main.yaml
roles/ansible-prerequisites/tasks/: main.yaml
roles/ansible_prerequisites/tasks/: main.yaml
roles/apt_updates/tasks/: main.yaml
roles/backup-device/tasks/: main.yaml
vars/: os_Debian.yaml
(+56 files in other folders)
