[tool.poetry]
name = "launchpad-ansible"
version = "0.1.0"
description = ""
authors = ["asiri <asiriw2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ansible = "^9.4.0"
passlib = "^1.7.4"

[tool.poetry.group.dev.dependencies]
ansible-lint = { version = "24.2.1", markers = 'platform_system != "Windows"' }
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
